---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F811_12.py:6:20: F811 [*] Redefinition of unused `mixer` from line 2
  |
4 |     pass
5 | else:
6 |     from bb import mixer
  |                    ^^^^^ F811
7 | mixer(123)
  |
  = help: Remove definition: `mixer`

ℹ Safe fix
3 3 | except ImportError:
4 4 |     pass
5 5 | else:
6   |-    from bb import mixer
  6 |+    pass
7 7 | mixer(123)


